log
Sun, May  4, 2025 11:28:01 PM: 
 treemap.c | 73 ++++++++++++++++++++++++++++++++++++---------------------------
 1 file changed, 42 insertions(+), 31 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:51:5: error: 'new' undeclared (first use in this function)
   51 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Sun, May  4, 2025 11:28:37 PM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:51:5: error: 'new' undeclared (first use in this function)
   51 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
35d9c32
Sun, May  4, 2025 11:28:45 PM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:51:5: error: 'new' undeclared (first use in this function)
   51 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
4b3b0a0
Sun, May  4, 2025 11:29:05 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
4ebfd54
Sun, May  4, 2025 11:29:17 PM: 
 tests:  1|8
total_score: 0/70
44eb2d2
Sun, May  4, 2025 11:29:40 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
0e809f7
Sun, May  4, 2025 11:29:59 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:51:5: error: 'new' undeclared (first use in this function)
   51 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
a6e3dc9
Sun, May  4, 2025 11:30:02 PM: 
Compilation failed
In file included from test.c:4:
treemap.c: In function 'createTreeMap':
treemap.c:51:5: error: 'new' undeclared (first use in this function)
   51 |     new->lower_than = lower_than;
      |     ^~~
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:6:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
d2ef3eb
Sun, May  4, 2025 11:30:30 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
ea37c67
Sun, May  4, 2025 11:36:24 PM: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  4|7
total_score: 5/70
9f3b4a4
